@@ -8,10 +8,6 @@
 	EXPORT	|_getpeername|
 	NAME	_getpeername
 |_getpeername|
-	[ __UNIXLIB_COMPAT_INET4 > 0
-	NetSWIsimple0	XSocket_Getpeername
-	|
 	NetSWIsimple0	XSocket_Getpeername_1
-	]
 
 	END
