@@ -8,10 +8,6 @@
 	EXPORT	|_getsockname|
 	NAME	_getsockname
 |_getsockname|
-	[ __UNIXLIB_COMPAT_INET4 > 0
-	NetSWIsimple0	XSocket_Getsockname
-	|
 	NetSWIsimple0	XSocket_Getsockname_1
-	]
 
 	END
