@@ -11,11 +11,7 @@
 	STMFD	sp!, {r4-r5, lr}
 	LDR	r4, [sp, #12]
 	LDR	r5, [sp, #16]
-	[ __UNIXLIB_COMPAT_INET4 > 0
-	NetSWI	XSocket_Recvfrom
-	|
 	NetSWI	XSocket_Recvfrom_1
-	]
 	LDMFD	sp!, {r4-r5, pc}
 
 	END
