@@ -8,10 +8,6 @@
 	EXPORT	|_recvmsg|
 	NAME	_recvmsg
 |_recvmsg|
-	[ __UNIXLIB_COMPAT_INET4 > 0
-	NetSWIsimple	XSocket_Recvmsg
-	|
 	NetSWIsimple	XSocket_Recvmsg_1
-	]
 
 	END
